Improved register options (#6)
* Fix radio input function

* Add user type selection funcionality to Register form

* Add user type radio input style

--- a/src/App.css
+++ b/src/App.css
@@ -12,4 +12,10 @@
 .registerForm {
   height: 560px;
 }
+.userTypeRadio {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+
+}
 
