--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,9 @@
   display: flex;
   justify-content: center;
   text-align: center;
-  
+  margin-top: 80px;
 }
+
 .loginForm, .registerForm {
   background-color: darkgrey;
   border-radius: 20px;
@@ -12,7 +13,7 @@
 }
 
 .registerForm {
-  height: 560px;
+  height: 530px;
 }
 .userTypeRadio {
   display: flex;
@@ -29,3 +30,7 @@
 
 }
 
+.user-type {
+  display: flex;
+  justify-content: space-around;
+}
