--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   margin-top: 80px;
 }
 
-.loginForm, .registerForm {
+.loginForm, .registerForm, .updateForm {
   background-color: darkgrey;
   border-radius: 20px;
   height: 482px;
@@ -14,6 +14,9 @@
 
 .registerForm {
   height: 530px;
+}
+.updateForm{
+  height: 570px;
 }
 
 .userTypeRadio {
