Navigation bar layout improvement (#47)
* Change to invoice number in payment component to be able to complete transactions

* Add animated spinner component to use when loading pages

* Add loading animated spinners to payment response page

* Add a conditional to dispatch when loading the pay button only if the userType is client

* Add a isUpdating flag to render loading spinner animations while the update is completed

* Add spinner animations to the loading conditional rendering statement in the payment response page and in the artist profile page

* Remove Spinner component import from Home page

* Add link to Rock Salt font from google fonts

* Add style to dropdown, nav links and brand font

* Add a dropdown menu to navigation bar, which includes user specific links

* Removed comented sections

* Indentation in lines 52-54

--- a/src/App.css
+++ b/src/App.css
@@ -69,4 +69,14 @@
   display: flex;
   justify-content: space-around;
 }
+.nav-link {
+  color:darkgrey;
+}
+.brand {
+  font-family: 'Rock Salt', cursive;
+}
+.dropDownLink{
+  color: black;
+}
+
 
