--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,11 @@
   cursor: pointer;
 }
 
+.artistCards:hover{
+  box-shadow: 8px 8px 5px grey;    
+  transform: scale(0.9);
+}
+
 .cardImage, .artistProfileImage {
   height: 200px;
   object-fit: cover;
